--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "862bd1d2",
+   "id": "2442581c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1613f602",
+   "id": "ab7b70d4",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a41f137",
+   "id": "70fe6745",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4cfcea9",
+   "id": "84965011",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b93e51c0",
+   "id": "46557a8b",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f99da85e",
+   "id": "45478877",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "25d1d2fd",
+   "id": "f5fe96e0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61a84c9e",
+   "id": "f55b1267",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "facaf6a7",
+   "id": "470ec6a1",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "06a6c376",
+   "id": "5cf36f9d",
    "metadata": {
     "scrolled": false
    },
@@ -170,6 +170,7 @@
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
     "    print(f'Word {word2} comes before {word1}')\n",
+    "    pri\n",
     "elif word1 < word2:\n",
     "    print(f'Word {word1} comes before {word2}')\n",
     "else:\n",
@@ -179,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53be6ea6",
+   "id": "8e33b6c9",
    "metadata": {},
    "outputs": [],
    "source": []
