--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53b4e632",
+   "id": "1728fb31",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f0378592",
+   "id": "127b692d",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5a7d82d9",
+   "id": "11123956",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6ddab874",
+   "id": "5892939c",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "264212ae",
+   "id": "298ff2d2",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "daf163dd",
+   "id": "b3fbfbe4",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6dd5d94e",
+   "id": "01439d0e",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5c7b1ebf",
+   "id": "d8782323",
    "metadata": {},
    "outputs": [
     {
@@ -179,10 +179,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a35bdb",
+   "id": "faabff6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name = input('Enter your name: ')\n",
+    "\n",
+    "if name == 'Reuven':\n",
+    "    print('Hello, boss!')\n",
+    "    print('It is so great to see you again!')\n",
+    "elif name == 'someone else':\n",
+    "    print('That is a very strange name...')\n",
+    "else:\n",
+    "    print(f'Hello, {name}. Who are you?')"
+   ]
   }
  ],
  "metadata": {
