--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -281,21 +281,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ab08598c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name1: Jaspreet\n",
+      "Enter your name2: Jaspreet\n",
+      "Hello, Jaspreet!\n",
+      "It is so great to see you again!\n"
+     ]
+    }
+   ],
    "source": [
-    "name = input('Enter your name: ')\n",
+    "name1 = input('Enter your name1: ')\n",
+    "name2 = input('Enter your name2: ')\n",
     "\n",
-    "if name == 'Reuven':\n",
-    "    print('Hello, boss!')\n",
+    "if name1 == 'Jaspreet':\n",
+    "    print('Hello, Jaspreet!')\n",
     "    print('It is so great to see you again!')\n",
-    "elif name == 'someone else':\n",
-    "    print('That is a very strange name...')\n",
+    "elif name2 == 'Jaspreet':\n",
+    "    print('Which Jaspreet?')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a74a540e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
