--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72803939",
+   "id": "60055fd0",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "161c87f1",
+   "id": "c8e63d5e",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9c2da848",
+   "id": "9b1859f4",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2a8b66dc",
+   "id": "cacd9d4c",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "12525c4a",
+   "id": "32f525c0",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "158fffab",
+   "execution_count": 36,
+   "id": "1c0f3982",
    "metadata": {
     "scrolled": true
    },
@@ -168,9 +168,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter random word: berry\n",
+      "please enter random word: a\n",
       "please enter another word berry\n",
-      "Error! same value entred\n"
+      "Here is your entries order berry then a\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
     "elif word1 == word2:\n",
     "    print('Error! same value entred')\n",
     "elif word1 == \"a\":\n",
-    "    print(0)\n",
+    "    print('please enter valid value')\n",
     "     \n",
     "else:\n",
     "    print(f'Here is your entries order {word1} then {word2}')"
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607c4ef9",
+   "id": "17eda4e4",
    "metadata": {},
    "outputs": [],
    "source": []
