--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2442581c",
+   "id": "94141a93",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab7b70d4",
+   "id": "fd263758",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70fe6745",
+   "id": "b6ed1229",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84965011",
+   "id": "064392c6",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46557a8b",
+   "id": "97ff4aff",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "45478877",
+   "id": "3c42817b",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f5fe96e0",
+   "id": "7ed802d0",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f55b1267",
+   "id": "ad14b585",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "470ec6a1",
+   "id": "2141499c",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5cf36f9d",
+   "execution_count": 26,
+   "id": "ad2f7704",
    "metadata": {
     "scrolled": false
    },
@@ -159,9 +159,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first worda\n",
-      "Enter second word\n",
-      "Word  comes before a\n"
+      "Enter first wordabc\n",
+      "Enter second wordcba\n",
+      "Word abc comes before cba\n"
      ]
     }
    ],
@@ -170,7 +170,7 @@
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
     "    print(f'Word {word2} comes before {word1}')\n",
-    "    pri\n",
+    "    print(len(word2))\n",
     "elif word1 < word2:\n",
     "    print(f'Word {word1} comes before {word2}')\n",
     "else:\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e33b6c9",
+   "id": "8e4eec45",
    "metadata": {},
    "outputs": [],
    "source": []
