--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1728fb31",
+   "id": "6e4826c1",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "127b692d",
+   "id": "e5325871",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "11123956",
+   "id": "3d8ba803",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5892939c",
+   "id": "92b8f423",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "298ff2d2",
+   "id": "de08927c",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b3fbfbe4",
+   "id": "a4f5b473",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "01439d0e",
+   "id": "39f0a6c7",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d8782323",
+   "id": "4e82ee3f",
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faabff6d",
+   "id": "9ccfadfb",
    "metadata": {},
    "outputs": [],
    "source": [
     "name = input('Enter your name: ')\n",
     "\n",
-    "if name == 'Reuven':\n",
+    "if name == 'Fatos':\n",
     "    print('Hello, boss!')\n",
     "    print('It is so great to see you again!')\n",
     "elif name == 'someone else':\n",
