--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "ab08598c",
    "metadata": {},
    "outputs": [
@@ -289,10 +289,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name1: Jaspreet\n",
-      "Enter your name2: Jaspreet\n",
-      "Hello, Jaspreet!\n",
-      "It is so great to see you again!\n"
+      "Enter your name1: JaspreetJaspreet\n",
+      "Enter your name2: JaspreetJaspreet\n",
+      "Hello, Jaspreet. Who are you?\n"
      ]
     }
    ],
@@ -312,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a74a540e",
+   "id": "95953dd2",
    "metadata": {},
    "outputs": [],
    "source": []
