--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d86d9e09",
    "metadata": {},
    "outputs": [
@@ -89,9 +89,8 @@
      "output_type": "stream",
      "text": [
       "Enter Word #1: test\n",
-      "Enter Word #2 (do not use same word): test1\n",
-      "test is first word alphabetically\n",
-      "test1 is not the first word alphabetically\n"
+      "Enter Word #2 (do not use same word): test\n",
+      "You entered same word, please try again!\n"
      ]
     }
    ],
@@ -119,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f3fb6ba",
+   "id": "0c6ee9c4",
    "metadata": {},
    "outputs": [],
    "source": []
