--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60055fd0",
+   "id": "c215e737",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c8e63d5e",
+   "id": "8c3c7cf1",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9b1859f4",
+   "id": "6e2e4fd2",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cacd9d4c",
+   "id": "5641fa6a",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "32f525c0",
+   "id": "a36cac9a",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "1c0f3982",
+   "execution_count": 38,
+   "id": "c18b4878",
    "metadata": {
     "scrolled": true
    },
@@ -168,9 +168,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please enter random word: a\n",
-      "please enter another word berry\n",
-      "Here is your entries order berry then a\n"
+      "please enter random word: b\n",
+      "please enter another word apple\n",
+      "please enter valid value\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
     "    print(f'Here is your entries order {word2} then {word1}')\n",
     "elif word1 == word2:\n",
     "    print('Error! same value entred')\n",
-    "elif word1 == \"a\":\n",
+    "elif word1 == \"b\":\n",
     "    print('please enter valid value')\n",
     "     \n",
     "else:\n",
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17eda4e4",
+   "id": "12085e67",
    "metadata": {},
    "outputs": [],
    "source": []
