--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6e4826c1",
+   "id": "fe5cac5b",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e5325871",
+   "id": "c0a9f030",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3d8ba803",
+   "id": "601cc568",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "92b8f423",
+   "id": "a2a43eed",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "de08927c",
+   "id": "53e65cd7",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a4f5b473",
+   "id": "7bd5b1d6",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "39f0a6c7",
+   "id": "40122343",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4e82ee3f",
+   "id": "8292f8e9",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ccfadfb",
+   "id": "fa160b83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
     "if name == 'Fatos':\n",
     "    print('Hello, boss!')\n",
     "    print('It is so great to see you again!')\n",
-    "elif name == 'someone else':\n",
+    "elif name == 'Abrakadabra':\n",
     "    print('That is a very strange name...')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
