--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -299,11 +299,10 @@
     "name1 = input('Enter your name1: ')\n",
     "name2 = input('Enter your name2: ')\n",
     "\n",
-    "if name1 == 'Jaspreet':\n",
-    "    print('Hello, Jaspreet!')\n",
-    "    print('It is so great to see you again!')\n",
-    "elif name2 == 'Jaspreet':\n",
-    "    print('Which Jaspreet?')\n",
+    "if name1 < name2:\n",
+    "    print(f'{name1} comes before {name2}')\n",
+    "elif name2 == name2:\n",
+    "    print(f'{name1} is s {name2}')\n",
     "else:\n",
     "    print(f'Hello, {name}. Who are you?')"
    ]
@@ -311,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95953dd2",
+   "id": "4687d7f6",
    "metadata": {},
    "outputs": [],
    "source": []
