--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c215e737",
+   "id": "a3c27f48",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8c3c7cf1",
+   "id": "2ef45122",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6e2e4fd2",
+   "id": "5e3b2055",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5641fa6a",
+   "id": "296e3505",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a36cac9a",
+   "id": "bea3ca1b",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c18b4878",
+   "execution_count": 40,
+   "id": "d2370315",
    "metadata": {
     "scrolled": true
    },
@@ -169,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "please enter random word: b\n",
-      "please enter another word apple\n",
+      "please enter another word a\n",
       "please enter valid value\n"
      ]
     }
@@ -191,7 +191,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12085e67",
+   "id": "b51c2c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d764b6b",
    "metadata": {},
    "outputs": [],
    "source": []
