--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fe5cac5b",
+   "id": "b82fea0f",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c0a9f030",
+   "id": "2677af6c",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "601cc568",
+   "id": "b8873cf6",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a2a43eed",
+   "id": "d8957057",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "53e65cd7",
+   "id": "874eca70",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "7bd5b1d6",
+   "id": "5934ea75",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "40122343",
+   "id": "ec717cbf",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8292f8e9",
+   "id": "42966f4b",
    "metadata": {},
    "outputs": [
     {
@@ -178,21 +178,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "4a76324a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3743149425.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[37], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    elseif first==second:\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first < second:    # if first comes before second in the dictionary...\n",
+    "    print(f'{first} comes before {second}')\n",
+    "elseif first ==second:\n",
+    "    printf(f\"{first} is equal {second}\")\n",
+    "else\n",
+    "    print(f'{second} comes before {first}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fa160b83",
+   "id": "1493f14d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = input('Enter your name: ')\n",
-    "\n",
-    "if name == 'Fatos':\n",
-    "    print('Hello, boss!')\n",
-    "    print('It is so great to see you again!')\n",
-    "elif name == 'Abrakadabra':\n",
-    "    print('That is a very strange name...')\n",
-    "else:\n",
-    "    print(f'Hello, {name}. Who are you?')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
