--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "ab08598c",
    "metadata": {},
    "outputs": [
@@ -289,9 +289,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name1: JaspreetJaspreet\n",
-      "Enter your name2: JaspreetJaspreet\n",
-      "Hello, Jaspreet. Who are you?\n"
+      "Enter your name1: son\n",
+      "Enter your name2: father\n",
+      "father comes before son\n"
      ]
     }
    ],
@@ -301,16 +301,16 @@
     "\n",
     "if name1 < name2:\n",
     "    print(f'{name1} comes before {name2}')\n",
-    "elif name2 == name2:\n",
-    "    print(f'{name1} is s {name2}')\n",
+    "elif name1 == name2:\n",
+    "    print(f'{name1} is same as {name2}')\n",
     "else:\n",
-    "    print(f'Hello, {name}. Who are you?')"
+    "    print(f'{name2} comes before {name1}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4687d7f6",
+   "id": "dfee6761",
    "metadata": {},
    "outputs": [],
    "source": []
