--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -101,7 +101,7 @@
     "    print (f'{word1} is first word alphabetically')\n",
     "    print (f'{word2} is not the first word alphabetically')\n",
     "elif word1 == word2: #check if words are equal\n",
-    "    print (f'You entered same word, please try again!')\n",
+    "    print (f'You entered same words, please try again!')\n",
     "else:  \n",
     "    print (f'{word2} is first word alphabetically')\n",
     "    print (f'{word1} is not the first word alphabetically')"
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6ee9c4",
+   "id": "3df5798b",
    "metadata": {},
    "outputs": [],
    "source": []
